--- a/.dvc/config
+++ b/.dvc/config
@@ -1,2 +1,5 @@
 [core]
     analytics = false
+    remote = storage
+['remote "storage"']
+    url = ../s3/buckets/dvc-gun-detection?region=us-east-1
